# auto-creator-monorepo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
JoyVASA/: README.md
JoyVASA/src/modules/: dit_talking_head.py
config/: two2one_config.py
microservices/common/: gpu_utils.py
microservices/modules/two2one/: audio_rttm.py  separate_speakers.py
yt-api-python/: app.py
yt-api-python/templates/: upload.html
