[tool.poetry]
name = "auto-creator-monorepo"
version = "0.1.0"
description = ""
authors = ["Harshax <basicleo787@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyannote-audio = "^3.1.1"
pydub = "^0.25.1"
librosa = "^0.10.1"
numpy = "^1.24.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
